# owl-cpp

./: CMakeLists.txt  jamroot.jam  version-tools.jam
cmake/: Config.cmake.in
include/owlcpp/detail/: object_id_base.hpp
include/owlcpp/io/: catalog.hpp  input.hpp  read_ontology_iri.hpp
include/owlcpp/rdf/: crtpb_ns_node_iri.hpp  map_doc.hpp  map_node.hpp
include/owlcpp/rdf/detail/: triple_index_map_impl.hpp  triple_index_vector_impl.hpp  triple_set.hpp
lib/: CMakeLists.txt
lib/io/: CMakeLists.txt  catalog.cpp  input.cpp  read_ontology_iri.cpp
lib/logic/: CMakeLists.txt  triple_to_fact.cpp
lib/logic/factpp/: adaptor_triple.cpp  data_instance.cpp  data_property.cpp  data_range.cpp  data_type.cpp  expression.hpp  obj_property.cpp  obj_type.cpp  query_fact.cpp
lib/rdf/: CMakeLists.txt
shared/: fsystem.hpp
